--- a/src/index.html
+++ b/src/index.html
@@ -4,9 +4,10 @@
 <head>
   <title>Sample Site</title>
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
-  <script crossorigin src="https://unpkg.com/react@16/umd/react.development.js"></script>
-  <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
-  <script crossorigin src="https://unpkg.com/@material-ui/core@latest/umd/material-ui.development.js"></script>
+  <script crossorigin src="https://unpkg.com/react@16.13.1/umd/react.development.js"></script>
+  <script crossorigin src="https://unpkg.com/react-dom@16.13.1/umd/react-dom.development.js"></script>
+  <script src="https://unpkg.com/react-router-dom@5.1.2/umd/react-router-dom.min.js"></script>
+  <script crossorigin src="https://unpkg.com/@material-ui/core@4.9.10/umd/material-ui.development.js"></script>
 </head>
 
 <body style="margin: 0px;padding: 0px;">
