react-hook-form 追加 sample component追加

--- a/public/index.html
+++ b/public/index.html
@@ -2,17 +2,19 @@
 <html lang="en">
 
 <head>
-  <title>Sample Site</title>
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
-  <script crossorigin src="https://unpkg.com/react@16.13.1/umd/react.development.js"></script>
-  <script crossorigin src="https://unpkg.com/react-dom@16.13.1/umd/react-dom.development.js"></script>
-  <script src="https://unpkg.com/react-router-dom@5.1.2/umd/react-router-dom.min.js"></script>
-  <script crossorigin src="https://unpkg.com/@material-ui/core@4.9.10/umd/material-ui.development.js"></script>
+    <title>Sample Site</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
+    <script crossorigin src="https://unpkg.com/react@16.13.1/umd/react.development.js"></script>
+    <script crossorigin src="https://unpkg.com/react-dom@16.13.1/umd/react-dom.development.js"></script>
+    <script src="https://unpkg.com/react-router-dom@5.1.2/umd/react-router-dom.min.js"></script>
+    <script crossorigin src="https://unpkg.com/@material-ui/core@4.9.10/umd/material-ui.development.js"></script>
+    <script crossorigin src="https://cdn.jsdelivr.net/npm/react-hook-form@6.3.0/dist/index.umd.production.min.js">
+    </script>
 </head>
 
 <body style="margin: 0px;padding: 0px;">
-  <div id="root"></div>
+    <div id="root"></div>
 </body>
 
 </html>
